// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sinonToReturn .not fails with any argument passed 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22msinonToReturn[2m()[22m

[1mMatcher error[22m: this matcher must not have an expected argument

Expected has type:  number
Expected has value: [32m555[39m"
`;

exports[`sinonToReturn .not passes when all calls throw 1`] = `
"[2mexpect.[22msinonToReturn[2m()[22m

Expected number of returns: >= [32m1[39m
Received number of returns:    [31m0[39m
Received number of calls:      [31m2[39m"
`;

exports[`sinonToReturn .not passes when not returned 1`] = `
"[2mexpect.[22msinonToReturn[2m()[22m

Expected number of returns: >= [32m1[39m
Received number of returns:    [31m0[39m"
`;

exports[`sinonToReturn .not works only on sinon.spy 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mnot[2m.[22msinonToReturn[2m()[22m

[1mMatcher error[22m: [31mreceived[39m value must be a stub or spy function

Received has type:  function
Received has value: [31m[Function fn][39m"
`;

exports[`sinonToReturn fails with any argument passed 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22msinonToReturn[2m()[22m

[1mMatcher error[22m: this matcher must not have an expected argument

Expected has type:  number
Expected has value: [32m555[39m"
`;

exports[`sinonToReturn includes the custom mock name in the error message 1`] = `
"[2mexpect([22m[31mnamed-mock[39m[2m).[22mnot[2m.[22msinonToReturn[2m()[22m

Expected number of returns: [32m0[39m
Received number of returns: [31m1[39m

1: [31m42[39m"
`;

exports[`sinonToReturn passes when at least one call does not throw 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturn[2m()[22m

Expected number of returns: [32m0[39m
Received number of returns: [31m2[39m

1: [31m42[39m
3: [31m42[39m

Received number of calls:   [31m3[39m"
`;

exports[`sinonToReturn passes when returned 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturn[2m()[22m

Expected number of returns: [32m0[39m
Received number of returns: [31m1[39m

1: [31m42[39m"
`;

exports[`sinonToReturn passes when undefined is returned 1`] = `
"[2mexpect.[22mnot[2m.[22msinonToReturn[2m()[22m

Expected number of returns: [32m0[39m
Received number of returns: [31m1[39m

1: [31mundefined[39m"
`;
